Fix alignment of added/removed lines in CodeRay
The line class is only applied to highlighted lines, not all of them, so
the padding was only applied to those instead of the whole document.
This broke the alignment, making diffs harder to read.

--- a/src/api/app/assets/stylesheets/webui/coderay.scss
+++ b/src/api/app/assets/stylesheets/webui/coderay.scss
@@ -26,7 +26,6 @@ span.CodeRay { white-space: pre }
 }
 
 .CodeRay .line, .CodeRay .code { width: 100% }
-.CodeRay .line { padding-left: 0.25rem }
 
 .CodeRay .debug { color: $card-bg; background: $blue }
 
